<resources>
    <string name="app_name">NewsApp</string>
    <string name="daily_news">Daily News</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="languages_and_regions_of_interest_title">Languages and regions of interest</string>
    <string name="notifications_title">Notifications</string>
    <string name="sound_title">Sound</string>
    <string name="auto_play_videos_title">Auto-play videos</string>
    <string name="article_text_size_title">Article text size</string>
    <string name="notification_description">Notify me about updates to news</string>
    <string name="sound_description">Auto-update apps at anytime</string>
    <string name="publishedTitle">Published</string>

    <string name="textViewPlaceholder">Test text placeholder</string>

    <string name="sharedPreferenceFile">com.artemkudryavtsev.newsapp.sharedPreferenceFile</string>
    <string name="countryCodeKey">countryCodeKey</string>
    <string name="defaultCountryCodeKey">us</string>
    <string name="defaultCountry">United States of America</string>
    <string name="open_in_a_browser">Open in a browser</string>
    <string name="share_the_article">Share the article</string>
    <string name="share">Share</string>
    <string name="boomark_the_article">Boomark the article</string>

    <string name="add_to_bookmarks">Add to bookmarks</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="language_and_region_appbar_title">Language and regions</string>
    <string name="article_text_size_appbar_title">Article text size</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="article_text_size_key">articleTextSizeKey</string>
    <string name="created_by">2021, Created by Artem Kudryavtsev</string>
</resources>